add handlers logout and logout-all, now redis cache uuid of refresh tokens not tokens themselves added new auth_redis methods. NEXT: category cache, balance cache, wallet cache, get currency rates and cache them /me handler
